// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panels Table Component renders empty panel table container 1`] = `
<div
  style={
    Object {
      "float": "left",
      "maxWidth": "1130px",
      "width": "100%",
    }
  }
>
  <div
    className="euiPage euiPage--paddingMedium euiPage--grow"
  >
    <div
      className="euiPageBody euiPageBody--borderRadiusNone"
    >
      <header
        className="euiPageHeader euiPageHeader--responsive euiPageHeader--center"
      >
        <div
          className="euiPageHeaderSection"
        >
          <h1
            className="euiTitle euiTitle--large"
          >
            Observability dashboards
          </h1>
        </div>
      </header>
      <div
        className="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
        id="customPanelArea"
        role="main"
      >
        <div
          className="euiPageContentHeader euiPageContentHeader--responsive"
        >
          <div
            className="euiPageContentHeaderSection"
          >
            <h3
              className="euiTitle euiTitle--small"
            >
              Dashboard
              <span
                className="panel-header-count"
              >
                 (
                0
                )
              </span>
            </h3>
            <div
              className="euiSpacer euiSpacer--s"
            />
            <div
              className="euiText euiText--small"
            >
              <div
                className="euiTextColor euiTextColor--subdued"
              >
                Use Observability Dashboard to create and view different visualizations on ingested observability data, using PPL (Piped Processing Language) queries.
                 
                <a
                  className="euiLink euiLink--primary"
                  href="https://opensearch.org/docs/latest/observability-plugin/operational-panels/"
                  rel="noreferrer"
                  target="blank"
                >
                  Learn more
                  <svg
                    aria-hidden={true}
                    aria-label="External link"
                    className="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
                    focusable="false"
                    height={16}
                    role="img"
                    style={null}
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </a>
              </div>
            </div>
          </div>
          <div
            className="euiPageContentHeaderSection"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                className="euiFlexItem"
              >
                <div
                  className="euiPopover euiPopover--anchorDownCenter"
                >
                  <div
                    className="euiPopover__anchor"
                  >
                    <button
                      className="euiButton euiButton--primary"
                      data-test-subj="operationalPanelsActionsButton"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "minWidth": undefined,
                        }
                      }
                      type="button"
                    >
                      <span
                        className="euiButtonContent euiButtonContent--iconRight euiButton__content"
                      >
                        <svg
                          aria-hidden={true}
                          className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                          focusable="false"
                          height={16}
                          role="img"
                          style={null}
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        />
                        <span
                          className="euiButton__text"
                        >
                          Actions
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                className="euiFlexItem"
              >
                <a
                  className="euiButton euiButton--primary euiButton--fill"
                  data-test-subj="customPanels__createNewPanels"
                  disabled={false}
                  href="#/create"
                  rel="noreferrer"
                  style={
                    Object {
                      "minWidth": undefined,
                    }
                  }
                >
                  <span
                    className="euiButtonContent euiButton__content"
                  >
                    <span
                      className="euiButton__text"
                    >
                      Create Dashboard
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <hr
          className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium"
        />
        <div
          className="euiSpacer euiSpacer--xxl"
        />
        <div
          className="euiText euiText--medium"
        >
          <div
            className="euiTextAlign euiTextAlign--center"
          >
            <h2
              data-test-subj="customPanels__noPanelsHome"
            >
              No Observability Dashboards
            </h2>
            <div
              className="euiSpacer euiSpacer--m"
            />
            <div
              className="euiText euiText--medium"
            >
              <div
                className="euiTextColor euiTextColor--subdued"
              >
                Use Observability Dashboards to dive deeper into observability
                <br />
                using PPL queries and insightful visualizations
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiSpacer euiSpacer--m"
        />
        <div
          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <a
              className="euiButton euiButton--primary"
              data-test-subj="customPanels__emptyCreateNewPanels"
              disabled={false}
              href="#/create"
              rel="noreferrer"
              style={
                Object {
                  "minWidth": undefined,
                }
              }
            >
              <span
                className="euiButtonContent euiButton__content"
              >
                <span
                  className="euiButton__text"
                >
                  Create Dashboard
                </span>
              </span>
            </a>
          </div>
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button
              className="euiButton euiButton--primary"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "minWidth": undefined,
                }
              }
              type="button"
            >
              <span
                className="euiButtonContent euiButton__content"
              >
                <span
                  className="euiButton__text"
                >
                  Add samples
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          className="euiSpacer euiSpacer--xxl"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Panels Table Component renders panel table container 1`] = `
<div
  style={
    Object {
      "float": "left",
      "maxWidth": "1130px",
      "width": "100%",
    }
  }
>
  <div
    className="euiPage euiPage--paddingMedium euiPage--grow"
  >
    <div
      className="euiPageBody euiPageBody--borderRadiusNone"
    >
      <header
        className="euiPageHeader euiPageHeader--responsive euiPageHeader--center"
      >
        <div
          className="euiPageHeaderSection"
        >
          <h1
            className="euiTitle euiTitle--large"
          >
            Observability dashboards
          </h1>
        </div>
      </header>
      <div
        className="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
        id="customPanelArea"
        role="main"
      >
        <div
          className="euiPageContentHeader euiPageContentHeader--responsive"
        >
          <div
            className="euiPageContentHeaderSection"
          >
            <h3
              className="euiTitle euiTitle--small"
            >
              Dashboard
              <span
                className="panel-header-count"
              >
                 (
                0
                )
              </span>
            </h3>
            <div
              className="euiSpacer euiSpacer--s"
            />
            <div
              className="euiText euiText--small"
            >
              <div
                className="euiTextColor euiTextColor--subdued"
              >
                Use Observability Dashboard to create and view different visualizations on ingested observability data, using PPL (Piped Processing Language) queries.
                 
                <a
                  className="euiLink euiLink--primary"
                  href="https://opensearch.org/docs/latest/observability-plugin/operational-panels/"
                  rel="noreferrer"
                  target="blank"
                >
                  Learn more
                  <svg
                    aria-label="External link"
                    className="euiIcon euiIcon--small euiLink__externalIcon"
                    focusable="false"
                    height={16}
                    role="img"
                    style={null}
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 8.5a.5.5 0 1 1 1 0V12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h3.5a.5.5 0 0 1 0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V8.5Zm-5.12.339a.5.5 0 1 1-.706-.707L13.305 2H10.5a.5.5 0 1 1 0-1H14a1 1 0 0 1 1 1v3.5a.5.5 0 1 1-1 0V2.72L7.88 8.838Z"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <div
            className="euiPageContentHeaderSection"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                className="euiFlexItem"
              >
                <div
                  className="euiPopover euiPopover--anchorDownCenter"
                >
                  <div
                    className="euiPopover__anchor"
                  >
                    <button
                      className="euiButton euiButton--primary"
                      data-test-subj="operationalPanelsActionsButton"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "minWidth": undefined,
                        }
                      }
                      type="button"
                    >
                      <span
                        className="euiButtonContent euiButtonContent--iconRight euiButton__content"
                      >
                        <svg
                          aria-hidden={true}
                          className="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                          focusable="false"
                          height={16}
                          role="img"
                          style={null}
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                            fillRule="non-zero"
                          />
                        </svg>
                        <span
                          className="euiButton__text"
                        >
                          Actions
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                className="euiFlexItem"
              >
                <a
                  className="euiButton euiButton--primary euiButton--fill"
                  data-test-subj="customPanels__createNewPanels"
                  disabled={false}
                  href="#/create"
                  rel="noreferrer"
                  style={
                    Object {
                      "minWidth": undefined,
                    }
                  }
                >
                  <span
                    className="euiButtonContent euiButton__content"
                  >
                    <span
                      className="euiButton__text"
                    >
                      Create Dashboard
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <hr
          className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium"
        />
        <div
          className="euiSpacer euiSpacer--xxl"
        />
        <div
          className="euiText euiText--medium"
        >
          <div
            className="euiTextAlign euiTextAlign--center"
          >
            <h2
              data-test-subj="customPanels__noPanelsHome"
            >
              No Observability Dashboards
            </h2>
            <div
              className="euiSpacer euiSpacer--m"
            />
            <div
              className="euiText euiText--medium"
            >
              <div
                className="euiTextColor euiTextColor--subdued"
              >
                Use Observability Dashboards to dive deeper into observability
                <br />
                using PPL queries and insightful visualizations
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiSpacer euiSpacer--m"
        />
        <div
          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <a
              className="euiButton euiButton--primary"
              data-test-subj="customPanels__emptyCreateNewPanels"
              disabled={false}
              href="#/create"
              rel="noreferrer"
              style={
                Object {
                  "minWidth": undefined,
                }
              }
            >
              <span
                className="euiButtonContent euiButton__content"
              >
                <span
                  className="euiButton__text"
                >
                  Create Dashboard
                </span>
              </span>
            </a>
          </div>
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button
              className="euiButton euiButton--primary"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "minWidth": undefined,
                }
              }
              type="button"
            >
              <span
                className="euiButtonContent euiButton__content"
              >
                <span
                  className="euiButton__text"
                >
                  Add samples
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          className="euiSpacer euiSpacer--xxl"
        />
      </div>
    </div>
  </div>
</div>
`;
